--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,3 +3,21 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+$uxl-size: 15rem;
+
+//Width
+$max-width: 80rem;
+
+//Font Size
+$font-size-small:1.4rem;
+$font-size-large: 1.8rem;
+
+//Colors
+$darkBlue: rgb(0,124,190);
+$dark-grey: #333333;
+$dark-slate-grey: #2c364a;
+$grey: #666;
+$light-grey: #f7f7f7;
+
+
+$desktop-breakpoint:45rem;
