--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,13 @@
 @import './base/settings';
 @import './base/base';
+@import './components/login';
+@import './components/buttons';
+@import './components/header';
+@import './components/content-container';
+@import './components/page-header';
+@import './components/expenseListFilters';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
